# gendiff

./: .codeclimate.yml  .gitignore  .travis.yml  Makefile  README.md  dev.py  main.py  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
gendiff/: cli.py  core.py  diff.py  main.py  utils.py  views.py
gendiff/scripts/: core.py  gendiff.py  run_gendiff.py
gendiff/views/: README.md  __init__.py  default.py  json.py  plain.py  stylish.py
tests/: conftest.py  test.py  test_gendiff.py  test_views.py
tests/fixtures/: before.json  plain_res.txt
tests/fixtures/nested/: after.json  before.json  gendiff_nested_res.txt  json_view_res.json  plain_res.txt  res_json.json  res_stylish.txt
tests/fixtures/simple/: gendiff_res.txt  gendiff_result.txt  json_view_res.json  plain_res.txt  res_json.json
