[tool.poetry]
name = "kotano-gendiff"
version = "0.3.1"
description = "Find difference between two files"
authors = ["kotano"]

packages = [
    { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.main:main"

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.4.1"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
